# openclaw-projects

./: .gitignore  cli.py  create_vm.py  create_vm.sh  delete_vm.py  delete_vm.sh  list_vms.py  list_vms.sh  pyproject.toml
.github/: copilot-instructions.md
openclaw_vm_scripts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_create_vm.py  test_delete_vm.py  test_list_vms.py
