[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-vm-scripts"
version = "0.1.0"
description = "Google Cloud VM management scripts for openclaw instances"
requires-python = ">=3.8"
authors = [
    {name = "OpenClaw Team"}
]
keywords = ["gcp", "vm", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.scripts]
manage-openclaw = "cli:manage_openclaw"
oc = "cli:manage_openclaw"
[tool.setuptools]
py-modules = ["cli", "create_vm", "delete_vm", "list_vms"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
